_generated-doc/2.13/config/quarkus-arc-config-group-arc-dev-mode-config.adoc

:summaryTableId: quarkus-arc-config-group-arc-dev-mode-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-arc-config-group-arc-dev-mode-config_configuration]]link:#quarkus-arc-config-group-arc-dev-mode-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-arc-config-group-arc-dev-mode-config_quarkus.arc.dev-mode.monitoring-enabled]]`link:#quarkus-arc-config-group-arc-dev-mode-config_quarkus.arc.dev-mode.monitoring-enabled[quarkus.arc.dev-mode.monitoring-enabled]`

[.description]
--
If set to true then the container monitors business method invocations and fired events during the development mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_DEV_MODE_MONITORING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_DEV_MODE_MONITORING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===